--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Itinerary Builder</title>
+  <title>Egeria - Itinerary Builder</title>
 
 <link rel="manifest" href="manifest.json" />
 
