--- a/index.html
+++ b/index.html
@@ -566,12 +566,16 @@ function updateModalTitleState() {
 
   if (!modalTitle || !modalItems) return;
 
-  const anySelected = modalItems.querySelectorAll("span.selected").length > 0;
+  const selectedSpans = modalItems.querySelectorAll("span.selected").length;
+  const selectedManuals = Object.keys(manualSelections).length;
+
+  const anySelected = selectedSpans > 0 || selectedManuals > 0;
 
   modalTitle.textContent = anySelected ? "Accept Selection" : "Select Activities";
   modalTitle.style.background = anySelected ? "#007aff" : "#faffbd";
   modalTitle.style.color = anySelected ? "white" : "#333";
 }
+
 
 function openModal(existingSelections = []) {
   const modal = document.getElementById("modal");
