--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@ input[readonly] {
   opacity: 0.8;
 }
 .selected-manual {
-  background-color: #007aff;
+  background-color: #0051cc;
   color: white;
   font-weight: bold;
   border-radius: 6px;
