--- a/index.html
+++ b/index.html
@@ -299,13 +299,13 @@ input[readonly] {
 }
 .selected-manual {
   background-color: #0051cc;
-  color: white;
+  color: white !important;
   font-weight: bold;
   border-radius: 6px;
-  padding: 0.3em 0.6em;
+  padding: 4px 8px;
+  margin: 3px;
   display: inline-block;
 }
-
   </style>
 </head>
 <body>
