--- a/index.html
+++ b/index.html
@@ -872,12 +872,11 @@ function promptSignature() {
     });
   }
 </script>
+
 <footer id="signature">
   <span>Egeria – Itinerary Builder · Made by <strong>Tito</strong></span>
 </footer>
-</body>
-</html>
 
-
+<!-- 🔽 INSERT SIGNATURE MODAL HERE BEFORE THIS TAG -->
 </body>
 </html>
