--- a/index.html
+++ b/index.html
@@ -433,7 +433,10 @@ function generateItinerary() {
     document.getElementById("shareButton").style.display = "inline-block";
   });
 
-  document.getElementById("output").textContent = output.trim();
+if (savedSignature) {
+  output += `Signature:\n${savedSignature}\n`;
+}
+document.getElementById("output").textContent = output.trim();
 }
 //////////////////////////////
 // END FUNCTION: generateItinerary //
@@ -848,6 +851,34 @@ function promptSignature() {
   }
 }
 
+<script>
+let savedSignature = localStorage.getItem("userSignature") || "";
+
+function openSignatureModal() {
+  document.getElementById("signatureInput").value = savedSignature;
+  document.getElementById("signatureModal").style.display = "flex";
+}
+
+function closeSignatureModal() {
+  document.getElementById("signatureModal").style.display = "none";
+}
+
+function saveSignature() {
+  const newSig = document.getElementById("signatureInput").value.trim();
+  savedSignature = newSig;
+  localStorage.setItem("userSignature", newSig);
+  closeSignatureModal();
+}
+
+function removeSignature() {
+  savedSignature = "";
+  localStorage.removeItem("userSignature");
+  closeSignatureModal();
+}
+</script>
+
+
+
 
 </script>
 
@@ -873,10 +904,51 @@ function promptSignature() {
   }
 </script>
 
+<script>
+  function showSignatureModal() {
+    const modal = document.getElementById("signatureModal");
+    const input = document.getElementById("signatureInput");
+    input.value = localStorage.getItem("itinerarySignature") || "";
+    modal.style.display = "flex";
+  }
+
+  function closeSignatureModal() {
+    document.getElementById("signatureModal").style.display = "none";
+  }
+
+  function saveSignature() {
+    const text = document.getElementById("signatureInput").value.trim();
+    if (text) {
+      localStorage.setItem("itinerarySignature", text);
+    } else {
+      localStorage.removeItem("itinerarySignature");
+    }
+    closeSignatureModal();
+  }
+
+  function removeSignature() {
+    localStorage.removeItem("itinerarySignature");
+    document.getElementById("signatureInput").value = "";
+    closeSignatureModal();
+  }
+</script>
+
+
 <footer id="signature">
   <span>Egeria – Itinerary Builder · Made by <strong>Tito</strong></span>
 </footer>
 
-<!-- 🔽 INSERT SIGNATURE MODAL HERE BEFORE THIS TAG -->
+<div id="signatureModal" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:999; justify-content:center; align-items:center;">
+  <div style="background:white; padding:1em; border-radius:8px; width:90%; max-width:500px; box-shadow:0 2px 10px rgba(0,0,0,0.3);">
+    <h3 style="margin-top:0;">Edit Signature</h3>
+    <textarea id="signatureInput" rows="4" style="width:100%; font-size:1em; padding:0.5em; border-radius:6px; border:1px solid #ccc;"></textarea>
+    <div style="margin-top:1em; display:flex; justify-content:space-between; gap:0.5em;">
+      <button onclick="removeSignature()" style="flex:1; background:#d9534f; color:white; border:none; padding:0.6em; border-radius:6px;">Remove</button>
+      <button onclick="saveSignature()" style="flex:1; background:#28a745; color:white; border:none; padding:0.6em; border-radius:6px;">Accept</button>
+      <button onclick="closeSignatureModal()" style="flex:1; background:#6c757d; color:white; border:none; padding:0.6em; border-radius:6px;">Cancel</button>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
