--- a/index.html
+++ b/index.html
@@ -336,22 +336,22 @@ input[readonly] {
 
 <pre id="output" style="white-space: pre-wrap; padding: 1em; border: 1px solid #ccc; border-radius: 6px; font-size: 1em; margin-bottom: 0.3em; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 ">
-✨ <b>How to Use the Itinerary Builder
+✨ <b>How to Use the Itinerary Builder </b>
 
 1. Enter the tour name.
-2. Select a start and end date (1–30 days range).</b>
+2. Select a start and end date (1–30 days range).
 <i>- The first day window will open</i>
-<b>3. Optional: keep or add a title next to the date
-4. Tap "+ Add Activity" to choose or type site names.</b>
+3. Optional: keep or add a title next to the date
+4. Tap "+ Add Activity" to choose or type site names.
 <i>- Selection window will open, when finished tap Accept Selection to return</i>
-<b>5. Tap "Next Day" to continue adding days.</b>
+5. Tap "Next Day" to continue adding days.
 <i>- Repeat same procedure as Day 1</i>
-<b>6. When done, tap "Summarize" to display final itinerary.</b>
+6. When done, tap "Summarize" to display final itinerary.
 <i>- It is possible to manually edit or add activities in any day, just press Summarize again to reflect the changes.</i>
-<b>7. Tap "Share or Save Itinerary" to send it to Notes, WhatsApp, email, or other apps.
+7. Tap "Share or Save Itinerary" to send it to Notes, WhatsApp, email, or other apps.
 
 
-⚠️ Note: Any change to the start or end dates will reset all activities.</b>
+⚠️ <b> Note: Any change to the start or end dates will reset all activities.</b>
 </pre>
 
 <div style="text-align: center; margin-top: 1em;">
