--- a/index.html
+++ b/index.html
@@ -852,6 +852,46 @@ function promptSignature() {
   }
 }
 
+function openSignatureModal() {
+  const input = document.getElementById("signatureInput");
+  const saved = localStorage.getItem("itinerarySignature") || "";
+  input.value = saved;
+  input.readOnly = true;
+
+  document.getElementById("signatureButtons").style.display = "flex";
+  document.getElementById("saveControls").style.display = "none";
+  document.getElementById("signatureModal").style.display = "flex";
+}
+
+function editSignature() {
+  document.getElementById("signatureInput").readOnly = false;
+  document.getElementById("signatureButtons").style.display = "none";
+  document.getElementById("saveControls").style.display = "flex";
+}
+
+function saveSignature() {
+  const value = document.getElementById("signatureInput").value.trim();
+  if (value) {
+    localStorage.setItem("itinerarySignature", value);
+  } else {
+    localStorage.removeItem("itinerarySignature");
+  }
+  closeSignatureModal(true);
+}
+
+function removeSignature() {
+  localStorage.removeItem("itinerarySignature");
+  closeSignatureModal(true);
+}
+
+function cancelEditSignature() {
+  openSignatureModal(); // reload last saved value
+}
+
+function closeSignatureModal(accepted = false) {
+  document.getElementById("signatureModal").style.display = "none";
+}
+
 
 </script>
 
@@ -876,12 +916,28 @@ function promptSignature() {
     });
   }
 </script>
+
 <footer id="signature">
   <span>Egeria – Itinerary Builder · Made by <strong>Tito</strong></span>
 </footer>
-</body>
-</html>
 
+<div id="signatureModal" style="display:none; position:fixed; inset:0; background:rgba(0,0,0,0.5); z-index:999; justify-content:center; align-items:center;">
+  <div style="background:white; padding:1em; border-radius:8px; width:90%; max-width:500px; box-shadow:0 2px 10px rgba(0,0,0,0.3); display:flex; flex-direction:column;">
+    <h3 style="margin-top:0;">Signature</h3>
+    <textarea id="signatureInput" rows="4" style="width:100%; font-size:1em; padding:0.5em; border-radius:6px; border:1px solid #ccc;" readonly></textarea>
+    
+    <div id="signatureButtons" style="margin-top:1em; display:flex; justify-content:space-between; gap:0.5em;">
+      <button onclick="removeSignature()" style="flex:1; background:#d9534f; color:white; border:none; padding:0.6em; border-radius:6px;">❌ Remove</button>
+      <button onclick="editSignature()" style="flex:1; background:#ffc107; color:black; border:none; padding:0.6em; border-radius:6px;">✏️ Edit</button>
+      <button onclick="closeSignatureModal(true)" style="flex:1; background:#28a745; color:white; border:none; padding:0.6em; border-radius:6px;">✅ Accept</button>
+    </div>
+
+    <div id="saveControls" style="margin-top:1em; display:none; flex-direction:row; gap:0.5em;">
+      <button onclick="saveSignature()" style="flex:1; background:#28a745; color:white; border:none; padding:0.6em; border-radius:6px;">💾 Save</button>
+      <button onclick="cancelEditSignature()" style="flex:1; background:#6c757d; color:white; border:none; padding:0.6em; border-radius:6px;">Cancel</button>
+    </div>
+  </div>
+</div>
 
 </body>
 </html>
