--- a/index.html
+++ b/index.html
@@ -826,7 +826,11 @@ document.addEventListener("DOMContentLoaded", () => {
 
 document.getElementById("signatureInput").addEventListener("click", () => {
   const input = document.getElementById("signatureInput");
+
   input.removeAttribute("readonly");
+  input.focus(); // bring up the keyboard
+  input.setSelectionRange(input.value.length, input.value.length); // move cursor to end
+
   document.getElementById("signatureButtons").style.display = "none";
   document.getElementById("saveControls").style.display = "flex";
 });
@@ -891,10 +895,15 @@ function saveSignature() {
 
 function removeSignature() {
   localStorage.removeItem("itinerarySignature");
-  document.getElementById("signatureInput").value = "";
-  closeSignatureModal();
-}
+  const input = document.getElementById("signatureInput");
+  input.value = "";
+  input.removeAttribute("readonly");
+  input.focus();
 
+  document.getElementById("removeSignatureBtn").style.display = "none";
+  document.getElementById("signatureButtons").style.display = "none";
+  document.getElementById("saveControls").style.display = "flex";
+}
 function cancelEditSignature() {
   openSignatureModal(); // reload from saved
 }
