--- a/index.html
+++ b/index.html
@@ -752,7 +752,6 @@ document.addEventListener("DOMContentLoaded", () => {
     modalTitle.style.color = hasSelections ? "white" : "#333";
   }
 
-  // Watch for class changes in modalItems to detect selection toggles
   const observer = new MutationObserver(updateModalTitleState);
   observer.observe(document.getElementById("modalItems"), {
     subtree: true,
@@ -760,10 +759,8 @@ document.addEventListener("DOMContentLoaded", () => {
     attributeFilter: ["class"]
   });
 
-  // Initial update on load
   updateModalTitleState();
 
-  // Modal title click = accept selected items
   modalTitle.onclick = () => {
     const outputChunks = [];
     const categoryMap = {};
@@ -773,16 +770,15 @@ document.addEventListener("DOMContentLoaded", () => {
         outputChunks.push(`${entry.label}`);
       } else if (entry.type === "item") {
         const { category, item } = entry;
-       if (category.includes("List of")) {
-  const existingIndex = outputChunks.findIndex(chunk =>
-    typeof chunk === "string" && !chunk.includes(":") && chunk.endsWith(".")
-  );
-  if (existingIndex !== -1) {
-    outputChunks[existingIndex] = outputChunks[existingIndex].slice(0, -1) + `, ${item}.`;
-  } else {
-    outputChunks.push(`${item}.`);
-  }
-
+        if (category.includes("List of")) {
+          const existingIndex = outputChunks.findIndex(chunk =>
+            typeof chunk === "string" && !chunk.includes(":") && chunk.endsWith(".")
+          );
+          if (existingIndex !== -1) {
+            outputChunks[existingIndex] = outputChunks[existingIndex].slice(0, -1) + `, ${item}.`;
+          } else {
+            outputChunks.push(`${item}.`);
+          }
         } else {
           if (!categoryMap[category]) {
             categoryMap[category] = [];
@@ -810,37 +806,30 @@ document.addEventListener("DOMContentLoaded", () => {
     currentTextArea.focus();
     document.getElementById("modal").style.display = "none";
 
-    // Reset selections
     selectionOrder = [];
     manualSelections = {};
-
-    // Reset modal title
     updateModalTitleState();
   };
 
-  // 👇 Add these to react to date changes
   document.getElementById("startDate").addEventListener("change", updateDayCount);
   document.getElementById("endDate").addEventListener("change", updateDayCount);
+
+  // ✅ Signature input tap-to-edit behavior
+  const sigInput = document.getElementById("signatureInput");
+  if (sigInput) {
+    sigInput.addEventListener("click", () => {
+      sigInput.removeAttribute("readonly");
+
+      setTimeout(() => {
+        sigInput.focus();
+        sigInput.setSelectionRange(sigInput.value.length, sigInput.value.length);
+      }, 0);
+
+      document.getElementById("signatureButtons").style.display = "none";
+      document.getElementById("saveControls").style.display = "flex";
+    });
+  }
 });
-
-
-document.getElementById("signatureInput").addEventListener("click", () => {
-  const input = document.getElementById("signatureInput");
-
-  // Enable editing
-  input.removeAttribute("readonly");
-
-  // Force focus and place cursor at end
-  setTimeout(() => {
-    input.focus();
-    input.setSelectionRange(input.value.length, input.value.length);
-  }, 0);
-
-  // Show the save buttons
-  document.getElementById("signatureButtons").style.display = "none";
-  document.getElementById("saveControls").style.display = "flex";
-});
-
 
 
 ///////////////////////////////////////////
