--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@ function cancelEditSignature() {
   <div style="background:white; padding:1em; border-radius:8px; width:90%; max-width:500px; box-shadow:0 2px 10px rgba(0,0,0,0.3);">
     <h3 style="margin-top:0;">Signature</h3>
 
-    <textarea id="signatureInput" rows="4" readonly style="width:100%; font-size:1em; padding:0.5em; border-radius:6px; border:1px solid #ccc;"></textarea>
+<textarea id="signatureInput" rows="4" style="width:100%; font-size:1em; padding:0.5em; border-radius:6px; border:1px solid #ccc;"></textarea>
 
     <div id="signatureButtons" style="display:flex; justify-content:space-between; margin-top:1em; gap:0.5em;">
       <button id="removeSignatureBtn" onclick="removeSignature()" style="flex:1; background:#dc3545; color:white; border:none; padding:0.6em; border-radius:6px;">❌ Remove</button>
